services/samples_for_ingress/name-based.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name-based
spec:
  ingressClassName: nginx
  rules:
    - host: red.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-red
                port:
                  number: 8080
    - host: blue.example.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: ha-blue
                port:
                  number: 8080
  defaultBackend:
    service:
      name: ha-error
      port:
        number: 80
